--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,3 +20,42 @@ title: Silkroad
     </div>
   </div>
 </div>
+
+<div class="s-offer">
+  <div class="s-wrapper">
+    <div class="s-header">
+      <h3>Offers</h3>
+      <button class="s-button s-button--text">
+        <i class="material-icons material-icons-outlined">
+          cloud_upload
+        </i>
+      </button>
+    </div>
+    <div class="s-offer__container">
+      <a class="s-offer__template s-offer__template--new" href="">
+        <div class="s-offer__template-content">
+          <i class="material-icons">
+            note_add
+          </i>
+        </div>
+        <div class="s-offer__template-footer">
+          <h5>
+            New Offer Letter
+          </h5>
+        </div>
+      </a>
+      <a class="s-offer__template" href="">
+        <div class="s-offer__template-content">
+          <i class="material-icons">
+            insert_drive_file
+          </i>
+        </div>
+        <div class="s-offer__template-footer">
+          <h5>
+            Sales Offer Letter 1
+          </h5>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
