Start Manage component

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,7 @@ title: Silkroad
     <div class="s-header">
       <h3>Offers</h3>
       <button class="s-button s-button--text">
-        <i class="material-icons material-icons-outlined">
+        <i class="material-icons">
           cloud_upload
         </i>
       </button>
@@ -56,6 +56,97 @@ title: Silkroad
           </h5>
         </div>
       </a>
+    </div>
+  </div>
+</div>
+
+<div class="s-manage-offers">
+  <div class="s-wrapper">
+    <h1>
+      Manage Your Offers
+    </h1>
+    <div class="s-manage-offers__table">
+      <table>
+        <tr>
+          <th>Status</th>
+          <th>Job Title</th>
+          <th>Candidate</th>
+          <th>Owner</th>
+          <th>Date</th>
+        </tr>
+        <tr>
+          <td>
+            <div class="s-status">
+              <span class="s-dot s-dot--red"></span>
+              <div>New Request</div>
+            </div>
+          </td>
+          <td>Some Job Title</td>
+          <td>Taylor Philips</td>
+          <td>Me</td>
+          <td>Jun 9</td>
+        </tr>
+        <tr>
+          <td>
+            <div class="s-status">
+              <span class="s-dot s-dot--green"></span>
+              <div>Approved</div>
+            </div>
+          </td>
+          <td>Some Job Title</td>
+          <td>Taylor Philips</td>
+          <td>Me</td>
+          <td>Jun 9</td>
+        </tr>
+        <tr>
+          <td>
+            <div class="s-status">
+              <span class="s-dot s-dot--dark-gray"></span>
+              <div>Pending Acceptance</div>
+            </div>
+          </td>
+          <td>Some Job Title</td>
+          <td>Taylor Philips</td>
+          <td>Me</td>
+          <td>Jun 9</td>
+        </tr>
+        <tr>
+          <td>
+            <div class="s-status">
+              <span class="s-dot s-dot--yellow"></span>
+              <div>Rejected</div>
+            </div>
+          </td>
+          <td>Some Job Title</td>
+          <td>Taylor Philips</td>
+          <td>Me</td>
+          <td>Jun 9</td>
+        </tr>
+        <tr>
+          <td>
+            <div class="s-status">
+              <span class="s-dot s-dot--blue"></span>
+              <div>Accepted</div>
+            </div>
+          </td>
+          <td>Some Job Title</td>
+          <td>Taylor Philips</td>
+          <td>Me</td>
+          <td>Jun 9</td>
+        </tr>
+        <tr>
+          <td>
+            <div class="s-status">
+              <span class="s-dot s-dot--gray"></span>
+              <div>Declined</div>
+            </div>
+          </td>
+          <td>Some Job Title</td>
+          <td>Taylor Philips</td>
+          <td>Me</td>
+          <td>Jun 9</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
