Make new components interactable

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -67,13 +67,15 @@ title: Silkroad
     </h1>
     <div class="s-manage-offers__table">
       <table>
-        <tr>
-          <th>Status</th>
-          <th>Job Title</th>
-          <th>Candidate</th>
-          <th>Owner</th>
-          <th>Date</th>
-        </tr>
+        <thead>
+          <tr>
+            <th>Status</th>
+            <th>Job Title</th>
+            <th>Candidate</th>
+            <th>Owner</th>
+            <th>Date</th>
+          </tr>
+        </thead>
         <tr>
           <td>
             <div class="s-status">
