Finish offers template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,153 +2,6 @@
 title: Silkroad
 ---
 
-<div class="s-nav">
-  <div class="s-wrapper">
-    <div class="s-nav__logo">
-      <img src="images/silkroad-logo.png" alt="Silkroad Logo" />
-    </div>
-    <div class="s-nav__search">
-      <div class="s-nav__search-icon">
-        <i class="material-icons">
-          search
-        </i>
-      </div>
-      <input type="text" placeholder="Search by project or person" />
-    </div>
-    <div class="s-nav__avatar">
-      <img src="http://www.radfaces.com/images/avatars/melvin-ferd.jpg" alt="Melvin Ferd" />
-    </div>
-  </div>
-</div>
-
-<div class="s-offer">
-  <div class="s-wrapper">
-    <div class="s-header">
-      <h3>Offers</h3>
-      <button class="s-button s-button--text">
-        <i class="material-icons">
-          cloud_upload
-        </i>
-      </button>
-    </div>
-    <div class="s-offer__container">
-      <a class="s-offer__template s-offer__template--new" href="">
-        <div class="s-offer__template-content">
-          <i class="material-icons">
-            note_add
-          </i>
-        </div>
-        <div class="s-offer__template-footer">
-          <h5>
-            New Offer Letter
-          </h5>
-        </div>
-      </a>
-      <a class="s-offer__template" href="">
-        <div class="s-offer__template-content">
-          <i class="material-icons">
-            insert_drive_file
-          </i>
-        </div>
-        <div class="s-offer__template-footer">
-          <h5>
-            Sales Offer Letter 1
-          </h5>
-        </div>
-      </a>
-    </div>
-  </div>
-</div>
-
-<div class="s-manage-offers">
-  <div class="s-wrapper">
-    <h1>
-      Manage Your Offers
-    </h1>
-    <div class="s-manage-offers__table">
-      <table>
-        <thead>
-          <tr>
-            <th>Status</th>
-            <th>Job Title</th>
-            <th>Candidate</th>
-            <th>Owner</th>
-            <th>Date</th>
-          </tr>
-        </thead>
-        <tr>
-          <td>
-            <div class="s-status">
-              <span class="s-dot s-dot--red"></span>
-              <div>New Request</div>
-            </div>
-          </td>
-          <td>Some Job Title</td>
-          <td>Taylor Philips</td>
-          <td>Me</td>
-          <td>Jun 9</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="s-status">
-              <span class="s-dot s-dot--green"></span>
-              <div>Approved</div>
-            </div>
-          </td>
-          <td>Some Job Title</td>
-          <td>Taylor Philips</td>
-          <td>Me</td>
-          <td>Jun 9</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="s-status">
-              <span class="s-dot s-dot--dark-gray"></span>
-              <div>Pending Acceptance</div>
-            </div>
-          </td>
-          <td>Some Job Title</td>
-          <td>Taylor Philips</td>
-          <td>Me</td>
-          <td>Jun 9</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="s-status">
-              <span class="s-dot s-dot--yellow"></span>
-              <div>Rejected</div>
-            </div>
-          </td>
-          <td>Some Job Title</td>
-          <td>Taylor Philips</td>
-          <td>Me</td>
-          <td>Jun 9</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="s-status">
-              <span class="s-dot s-dot--blue"></span>
-              <div>Accepted</div>
-            </div>
-          </td>
-          <td>Some Job Title</td>
-          <td>Taylor Philips</td>
-          <td>Me</td>
-          <td>Jun 9</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="s-status">
-              <span class="s-dot s-dot--gray"></span>
-              <div>Declined</div>
-            </div>
-          </td>
-          <td>Some Job Title</td>
-          <td>Taylor Philips</td>
-          <td>Me</td>
-          <td>Jun 9</td>
-        </tr>
-      </table>
-    </div>
-  </div>
+<div class="s-wrapper" style="padding: 20px">
+  <a href="/offers-template.html">Offers Template</a>
 </div>
