Finish new offer upload template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,13 @@
 ---
-title: Silkroad
+title: Silkroad - UI List
 ---
 
 <div class="s-wrapper" style="padding: 20px">
-  <a href="/offers-template.html">Offers Template</a>
+  <a href="/offers-page.html">Offers Page</a>
+  <br />
+  <a href="/new-offer.html">New Offer</a>
+  <br />
+  <a href="/new-offer-upload-loading.html">New Offer Upload Loading</a>
+  <br />
+  <a href="/new-offer-upload-added.html">New Offer Upload Added</a>
 </div>
