--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -44,12 +44,25 @@ p
 
 h1
   font-size: 2.4rem
+  font-weight: 400
+
+h2
+  font-size: 2rem
+  font-weight: 400
 
 h3
   font-size: 1.8rem
+  font-weight: 400
 
 h5
   font-size: 1.4rem
+  font-weight: 400
+
+hr
+  border: none
+  height: .2rem
+  background: $gray
+  margin: 4rem 0
 
 // Buttons
 .s-button
@@ -57,7 +70,8 @@ h5
   background: $blue
   color: $white
   border: none
-  width: 10rem
+  font-size: 1.4rem
+  padding:  0 2rem
 
   &:hover
     background: darken($blue, 5%)
@@ -66,13 +80,104 @@ h5
   &--text
     border: none
     background: none
-    color: $dark-gray
+    color: $gray
     width: auto
+    display: flex
+    align-items: center
+    padding: 0
+
+    span
+      font-size: 1.4rem
+      display: inline-block
+      margin: 0 0 0 .5rem
 
     &:hover
-      background: $gray
-      i
+      background: none
+      cursor: pointer
+      i, span
         color: $blue
+
+  &--secondary
+    background: $green
+
+    &:hover
+      background: darken($green, 5%)
+
+  &--large
+    height: 4.8rem
+
+// Forms
+.s-form
+
+  &__field
+    margin: 0 0 2rem 0
+
+    &--error
+
+      .s-error-message
+        display: block
+
+      .s-input
+        border-color: $red
+
+.s-label
+  display: block
+  text-transform: uppercase
+  color: darken($gray, 20%)
+
+.s-input
+  display: block
+  border: 0
+  background: 0
+  padding: 1rem 0
+  border-bottom: $gray .1rem solid
+  font-size: 1.4rem
+  width: 100%
+
+  &:focus
+    border-color: $blue
+
+.s-error-message
+  background: $red
+  color: white
+  padding: 1rem
+  display: none
+  margin: 1rem 0 0 0
+
+// Upload
+.s-upload
+  background: $medium-gray
+  padding: 4rem 6rem
+  margin: 0 0 4rem 0
+
+  &__button
+    width: .01rem
+    height: .01rem
+    opacity: 0
+    overflow: hidden
+    position: absolute
+    z-index: -1
+
+    + label
+      font-size: 1.4rem
+      color: white
+      background-color: $green
+      display: inline-block
+      height: 4.8rem
+      padding: 0 2rem
+      line-height: 4.8rem
+
+    &:focus + label, + label:hover
+      background-color: darken($green, 5%)
+
+  &__doc
+    display: flex
+    align-items: center
+    color: darken($gray, 20%)
+
+    span
+      display: block
+      margin: 0 1rem
 
 // Max-width and Flex Wrapper
 .s-wrapper
@@ -134,6 +239,17 @@ h5
       display: inline-block
       vertical-align: middle
       border-radius: 50%
+
+  &__breadcrumb
+    display: flex
+
+    p
+      font-size: 2.4rem
+      font-weight: 400
+
+    .s-button--text
+      font-size: 3rem
+      margin-right: 2rem
 
 // Header
 .s-header
@@ -278,3 +394,43 @@ h5
         margin: 1rem 0 0 0
         padding: 0
         color: $dark-gray
+
+// New Offer
+.s-new-offer
+  padding: 4rem 0
+
+  .s-wrapper
+    display: flex
+
+  .s-input, .s-error-message
+    max-width: 40rem
+
+  &__content
+    flex-grow: 2
+
+// Sidebar
+.s-sidebar
+  width: 33.33%
+
+// Loading Progress Bar
+.s-progress
+
+  &__background
+    height: 1.6rem
+    position: relative
+    background: darken($medium-gray, 10%)
+    border-radius: 100rem
+
+  &__bar
+    height: inherit
+    position: absolute
+    background: $green
+    border-radius: 100rem
+
+  &__text
+    text-align: center
+    margin: 1rem 0 0 0
+    color: darken($medium-gray, 30%)
+
+    span
+      color: $dark-gray
