Add offer details template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,4 +10,6 @@ title: Silkroad - UI List
   <a href="/new-offer-upload-loading.html">New Offer Upload Loading</a>
   <br />
   <a href="/new-offer-upload-added.html">New Offer Upload Added</a>
+  <br />
+  <a href="/new-offer-details.html">New Offer Details</a>
 </div>
