--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -56,7 +56,7 @@ h3
 
 h5
   font-size: 1.4rem
-  font-weight: 400
+  font-weight: 600
 
 hr
   border: none
@@ -110,20 +110,27 @@ hr
 .s-form
 
   &__field
-    margin: 0 0 2rem 0
+    margin: 0 0 3rem 0
 
     &--error
 
       .s-error-message
         display: block
 
+      .s-label
+        color: $red
+
       .s-input
         border-color: $red
+
+  .s-column
+    margin-right: 10rem
 
 .s-label
   display: block
   text-transform: uppercase
   color: darken($gray, 20%)
+  margin: 0 0 1rem 0
 
 .s-input
   display: block
@@ -143,6 +150,30 @@ hr
   padding: 1rem
   display: none
   margin: 1rem 0 0 0
+
+\::-webkit-input-placeholder
+  /* Chrome/Opera/Safari
+  color: $gray
+
+\::-moz-placeholder
+  /* Firefox 19+
+  color: $gray
+
+\:-ms-input-placeholder
+  /* IE 10+
+  color: $gray
+
+\:-moz-placeholder
+  /* Firefox 18-
+  color: $gray
+
+// Layout
+.s-two-column
+  display: flex
+  justify-content: space-between
+
+  .s-column
+    width: 50%
 
 // Upload
 .s-upload
@@ -318,6 +349,9 @@ hr
   .s-dot
     margin-right: .5rem
 
+    &--large
+      margin-right: 2rem
+
 // Dots
 .s-dot
   width: .6rem
@@ -342,6 +376,10 @@ hr
 
   &--gray
     background: $gray
+
+  &--large
+    width: 1.1rem
+    height: 1.1rem
 
 // Manage Offers Section
 .s-manage-offers
@@ -411,6 +449,21 @@ hr
 // Sidebar
 .s-sidebar
   width: 33.33%
+  padding-left: 10rem
+
+  &__header
+    display: flex
+    justify-content: space-between
+    background: $medium-gray
+    margin: 0 -2rem 4rem -2rem
+    padding: 2rem
+    align-items: center
+    color: darken($gray, 20%)
+
+  &__content
+    border-left: .1rem solid $gray
+    padding-left: 2rem
+    height: 100%
 
 // Loading Progress Bar
 .s-progress
