Add additional offer details template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,4 +12,6 @@ title: Silkroad - UI List
   <a href="/new-offer-upload-added.html">New Offer Upload Added</a>
   <br />
   <a href="/new-offer-details.html">New Offer Details</a>
+  <br />
+  <a href="/new-offer-details-rejected-edit.html">New Offer Rejected Details Edit</a>
 </div>
