Add iframe template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,4 +14,8 @@ title: Silkroad - UI List
   <a href="/new-offer-details.html">New Offer Details</a>
   <br />
   <a href="/new-offer-details-rejected-edit.html">New Offer Rejected Details Edit</a>
+  <br />
+  <a href="/new-offer-add-signature-fields.html">New Off Add Signature Fields</a>
+  <br />
+  <a href="/offer-preview.html">Offer Preview</a>
 </div>
