--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -282,6 +282,12 @@ hr
       font-size: 3rem
       margin-right: 2rem
 
+  &--preview
+    background: $light-gray
+
+    .s-wrapper
+      border-bottom: $gray .2rem solid
+
 // Header
 .s-header
   border-bottom: $gray .2rem solid
@@ -487,3 +493,15 @@ hr
 
     span
       color: $dark-gray
+
+// iFrame Container
+.s-iframe-container
+  margin: 4rem 0
+  box-shadow: 0 .5rem .8rem 0 rgba(0,0,0,0.19)
+  padding: 0
+
+  iframe
+    width: 100%
+    height: 100%
+    border: none
+    min-height: 60rem
