Finish add approvers template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,5 +17,7 @@ title: Silkroad - UI List
   <br />
   <a href="/new-offer-add-signature-fields.html">New Off Add Signature Fields</a>
   <br />
+  <a href="/new-offer-add-approvers.html">New Off Add Approvers</a>
+  <br />
   <a href="/offer-preview.html">Offer Preview</a>
 </div>
