--- a/source/offers-page.html.erb
+++ b/source/offers-page.html.erb
@@ -103,7 +103,7 @@ title: Silkroad - Offers Page
         <tr>
           <td>
             <div class="s-status">
-              <span class="s-dot s-dot--dark-gray"></span>
+              <span class="s-dot s-dot--dark-blue"></span>
               <div>Pending Acceptance</div>
             </div>
           </td>
