Add candidate offer eSign template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,4 +20,6 @@ title: Silkroad - UI List
   <a href="/new-offer-add-approvers.html">New Off Add Approvers</a>
   <br />
   <a href="/offer-preview.html">Offer Preview</a>
+  <br />
+  <a href="/candidate-offer-esign.html">Candidate Offer eSign</a>
 </div>
