Add menu to candidate offer eSign template

--- a/source/candidate-offer-esign.html.erb
+++ b/source/candidate-offer-esign.html.erb
@@ -26,13 +26,19 @@ title: Silkroad - Candidate Offer eSign
             Pending Your Acceptance
           </p>
         </div>
-        <div class="s-candidate-help-text">Please review and sign the attached document to accept your offer. To request changes, please complete the form below:</div>
+        <div class="s-help-text">Please review and sign the attached document to accept your offer. To request changes, please complete the form below:</div>
         <form class="s-form">
           <div class="s-form__field">
             <label class="s-label">Request a Change</label>
             <input class="s-input" placeholder="What do you want to change?" />
             <div class="s-error-message">
               Oops something went from.
+            </div>
+            <div class="s-menu">
+              <h5>My Address</h5>
+              <a href="#" class="s-menu__item">Benefits</a>
+              <a href="#" class="s-menu__item">Salary</a>
+              <a href="#" class="s-menu__item">Start Date</a>
             </div>
           </div>
           <div class="s-form__field">
