--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -114,6 +114,7 @@ hr
 
   &__field
     margin: 0 0 3rem 0
+    position: relative
 
     &--error
 
@@ -603,7 +604,30 @@ hr
     p
       font-size: 1rem
 
-.s-candidate-help-text
+// Sidebar Help Text
+.s-help-text
   font-size: 1.4rem
   line-height: 2.8rem
   margin-bottom: 4rem
+
+//Menu
+.s-menu
+  background: $white
+  position: absolute
+  box-shadow: 0 .2rem .4rem 0 rgba(0,0,0,0.19)
+  z-index: 1
+  padding: 2rem 0
+
+  h5
+    color: darken($gray, 20%)
+    font-size: 1.5rem
+    margin: 0 0 1rem 0
+    padding: 0 2rem
+
+  &__item
+    display: block
+    padding: 0 2rem
+    color: $dark-gray
+
+    &:hover
+      background: $medium-gray
