Add candidate login template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,5 +21,9 @@ title: Silkroad - UI List
   <br />
   <a href="/offer-preview.html">Offer Preview</a>
   <br />
+  <a href="/candidate-signup.html">Candidate Sign Up</a>
+  <br />
+  <a href="/candidate-login.html">Candidate Login</a>
+  <br />
   <a href="/candidate-offer-esign.html">Candidate Offer eSign</a>
 </div>
