--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,27 +3,27 @@ title: Silkroad - UI List
 ---
 
 <div class="s-wrapper" style="padding: 20px">
-  <a href="/offers-page.html">Offers Page</a>
+  <a href="offers-page.html">Offers Page</a>
   <br />
-  <a href="/new-offer.html">New Offer</a>
+  <a href="new-offer.html">New Offer</a>
   <br />
-  <a href="/new-offer-upload-loading.html">New Offer Upload Loading</a>
+  <a href="new-offer-upload-loading.html">New Offer Upload Loading</a>
   <br />
-  <a href="/new-offer-upload-added.html">New Offer Upload Added</a>
+  <a href="new-offer-upload-added.html">New Offer Upload Added</a>
   <br />
-  <a href="/new-offer-details.html">New Offer Details</a>
+  <a href="new-offer-details.html">New Offer Details</a>
   <br />
-  <a href="/new-offer-details-rejected-edit.html">New Offer Rejected Details Edit</a>
+  <a href="new-offer-details-rejected-edit.html">New Offer Rejected Details Edit</a>
   <br />
-  <a href="/new-offer-add-signature-fields.html">New Off Add Signature Fields</a>
+  <a href="new-offer-add-signature-fields.html">New Off Add Signature Fields</a>
   <br />
-  <a href="/new-offer-add-approvers.html">New Off Add Approvers</a>
+  <a href="new-offer-add-approvers.html">New Off Add Approvers</a>
   <br />
-  <a href="/offer-preview.html">Offer Preview</a>
+  <a href="offer-preview.html">Offer Preview</a>
   <br />
-  <a href="/candidate-signup.html">Candidate Sign Up</a>
+  <a href="candidate-signup.html">Candidate Sign Up</a>
   <br />
-  <a href="/candidate-login.html">Candidate Login</a>
+  <a href="candidate-login.html">Candidate Login</a>
   <br />
-  <a href="/candidate-offer-esign.html">Candidate Offer eSign</a>
+  <a href="candidate-offer-esign.html">Candidate Offer eSign</a>
 </div>
