Add date picker

--- a/source/new-offer-add-approvers.html.erb
+++ b/source/new-offer-add-approvers.html.erb
@@ -16,7 +16,11 @@ title: Silkroad - New Offer Details
       <input type="text" placeholder="Search by project or person" />
     </div>
     <div class="s-nav__avatar">
-      <a href="#"><img src="http://www.radfaces.com/images/avatars/melvin-ferd.jpg" alt="Melvin Ferd" /></a>
+      <a href="#">
+        <div class="s-nav__avatar-placeholder">
+          aa
+        </div>
+      </a>
     </div>
   </div>
 </div>
