--- a/source/new-offer-details-rejected-edit.html.erb
+++ b/source/new-offer-details-rejected-edit.html.erb
@@ -20,7 +20,7 @@ title: Silkroad - New Offer Edit Rejected
     <div class="s-new-offer__content">
       <div class="s-status">
         <span class="s-dot s-dot--large s-dot--yellow"></span>
-        <h1>Sales Job Title</h1>
+        <h1><input type="text" value="Sales Job Title" /></h1>
       </div>
       <form class="s-form">
         <div class="s-two-column">
