--- a/source/offers-page.html.erb
+++ b/source/offers-page.html.erb
@@ -15,8 +15,19 @@ title: Silkroad - Offers Page
       </div>
       <input type="text" placeholder="Search by project or person" />
     </div>
-    <div class="s-nav__avatar">
-      <a href="#"><img src="http://www.radfaces.com/images/avatars/melvin-ferd.jpg" alt="Melvin Ferd" /></a>
+    <div class="s-nav__menu-container">
+      <div class="s-nav__avatar">
+        <a href="#">
+          <div class="s-nav__avatar-placeholder">
+            aa
+          </div>
+        </a>
+      </div>
+      <div class="s-menu">
+        <a href="#" class="s-menu__item">Option 1</a>
+        <a href="#" class="s-menu__item s-menu__item--selected">Option 2</a>
+        <a href="#" class="s-menu__item">Option 3</a>
+      </div>
     </div>
   </div>
 </div>
