--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,10 @@
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Middleman" %></title>
     <%= stylesheet_link_tag "site" %>
+    <%= stylesheet_link_tag "datepicker.min" %>
     <%= javascript_include_tag "site" %>
+    <%= javascript_include_tag "https://code.jquery.com/jquery-3.3.1.min.js" %>
+    <%= javascript_include_tag "datepicker.min" %>
   </head>
   <body>
     <%= yield %>
