--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,8 @@ title: Silkroad - UI List
 ---
 
 <div class="s-wrapper" style="padding: 20px">
+  <a href="ui.html">UI</a>
+  <br />
   <a href="offers-page.html">Offers Page</a>
   <br />
   <a href="new-offer.html">New Offer</a>
