--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,9 @@ title: Silkroad - UI List
 <div class="s-wrapper" style="padding: 20px">
   <a href="ui.html">UI</a>
   <br />
-  <a href="board.html">Board</a>
+  <a href="candidate-welcome.html">Candidate Welcome</a>
+  <br />
+  <a href="candidate-offer.html">Candidate Offer</a>
   <br />
   <a href="offers-page.html">Offers Page</a>
   <br />
