--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,6 +9,8 @@ title: Silkroad - UI List
   <br />
   <a href="candidate-offer.html">Candidate Offer</a>
   <br />
+  <a href="candidate-work-life.html">Candidate Work Life</a>
+  <br />
   <a href="offers-page.html">Offers Page</a>
   <br />
   <a href="new-offer.html">New Offer</a>
