--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,6 +11,8 @@ title: Silkroad - UI List
   <br />
   <a href="candidate-work-life.html">Candidate Work Life</a>
   <br />
+  <a href="template-list.html">Template List</a>
+  <br />
   <a href="offers-page.html">Offers Page</a>
   <br />
   <a href="new-offer.html">New Offer</a>
